fixed a bug with word break in email

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -704,7 +704,7 @@ main {
 
 						&--email {
 							width: 100%;
-							word-wrap: break-word;
+							// word-wrap: break-word;
 							text-align: center;
 						}
 
